load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")

nogo(
    name = "main_nogo",
    vet = True,
    visibility = ["//visibility:public"],
)

alias(
    name = "go",
    actual = "@rules_go//go:go",
)

go_library(
    name = "tools-nogo-issue_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/tools-nogo-issue",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_binary(
    name = "repro",
    embed = [":tools-nogo-issue_lib"],
    visibility = ["//visibility:public"],
)
