"""tools/nogo Issue Reproducible"""

module(
    name = "tools-nogo-issue",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.7")
go_sdk.nogo(nogo = "//:main_nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_sirupsen_logrus")

nogo_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", isolate = True)
nogo_deps.from_file(go_mod = "//tools/nogo:go.mod")
use_repo(nogo_deps, "org_golang_x_tools")
